add b2b readiness checks
